// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table section 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="test"
  />
</Fragment>
`;

exports[`should render a table section with a row 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="test"
  />
  <TableRow
    isSelectable={false}
    isSelected={false}
    isStriped={false}
  />
</Fragment>
`;

exports[`should render a table section with isCollapsible 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={true}
    level={3}
    title="test"
  />
</Fragment>
`;

exports[`should render a table section with isCollpased 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={true}
    isCollapsible={false}
    level={3}
    title="test"
  />
</Fragment>
`;

exports[`should render a table section with level 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={false}
    level={4}
    title="test"
  />
</Fragment>
`;

exports[`should render a table section with metaData 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    metaData={Object {}}
    title="test"
  />
</Fragment>
`;

exports[`should render a table section with onSelect 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    onSelect={[MockFunction]}
    title="test"
  />
</Fragment>
`;

exports[`should render a table section with refCallback 1`] = `
<Fragment>
  <TableSubsectionHeader
    colSpan={1}
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    refCallback={[MockFunction]}
    title="test"
  />
</Fragment>
`;
